kubernetes/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-client
  namespace: grpc
  labels:
    app: grpc-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-client
  template:
    metadata:
      labels:
        app: grpc-client
    spec:
      containers:
      - name: grpc-client
        image: lucasegp/grpc-client:latest
