kubernetes/server.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-server
  namespace: grpc
  labels:
    app: grpc-server
spec:
  selector:
    app: grpc-server
  ports:
    - name: grpc
      port: 50501
      targetPort: 50501
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-server-v1
  namespace: grpc
  labels:
    app: grpc-server
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-server
      version: v1
  template:
    metadata:
      labels:
        app: grpc-server
        version: v1
    spec:
      containers:
      - name: grpc-server
        image: lucasegp/grpc-server:v1
        ports:
        - containerPort: 50501
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-server-v2
  namespace: grpc
  labels:
    app: grpc-server
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-server
      version: v2
  template:
    metadata:
      labels:
        app: grpc-server
        version: v2
    spec:
      containers:
      - name: grpc-server
        image: lucasegp/grpc-server:v2
        ports:
        - containerPort: 50501
